# snowplow-website-signals-demo

backend/: Dockerfile  Dockerfile.prod  docker-compose.yml  main.tf  pyproject.toml
backend/web_demo_backend/: main.py
backend/web_demo_backend/routers/: __init__.py  predict.py
backend/web_demo_backend/signals/: signals.py
backend/web_demo_backend/signals/attributes/: user_attributes.py
backend/web_demo_backend/signals/views/: __init__.py  user_attributes_view.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/assets/: vite-widget.css  vite-widget.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/signals-admin/: Attributes.tsx  Explore.tsx  Interventions.tsx  SignalsAdminButton.tsx  SignalsWidget.tsx  SnowplowLogo.tsx  SplashScreen.tsx
frontend/src/lib/: constants.ts  types.ts  utils.ts
